fix bug 15820,memory leak in ImageManagerImpl by converting it to a service on gtk, windows and mac.r=dp